header style alignment fix

--- a/client/style/globals/header.import.less
+++ b/client/style/globals/header.import.less
@@ -19,7 +19,7 @@ header {
   }
 
   .left-drawer-toggle {
-
+		padding:16px 20px !important;
   }
 
   .logo {
